--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/recharts": "^1.8.29",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^10.12.16",
     "katex": "^0.16.11",
     "next": "14.2.11",
